# terminedia

./: .gitignore  CONTRIB.md  DONE.txt  FRIENDS.md  MANIFEST.in  Makefile  README.md  TODO.rst  TODO.txt  ansiraid.py  bla1.py  pyproject.toml  pytest.ini  setup.py  terminedia.py  test.html
docs/: uml.txt
docs/source/: api.rst  conf.py  index.rst  modules.rst  terminedia.rst
examples/: bezier.py  butterfly_bw.tiff  ellipses.py  image.py  moon_ascii_bw.pgm  moon_ascii_color.ppm  moon_bin_bw.pgm  moon_bin_color.pnm  pil_image.py  plot.py  shapes.py
scratch/: README  ftest.py  widtest.py  widtest2.py
terminedia/: __init__.py  asynchronous.py  backend_common.py  constants.py  context.py  contexts.py  drawing.py  events.py  html.py  image.py  input.py  keyboard.py  screen.py  sprites.py  subpixels.py  terminal.py  text.py  transformers.py  unicode.py  unicode_transforms.py  utils.py  values.py  widgets.py
terminedia/data/: emoji.py  unscii-16-full.hex
terminedia/examples/: bezier.py  context.py  effects.py  ellipses.py  image.py  lines.py  looptest.py  mousesnippet.py  pil_image.py  plot.py  shapes.py  simple_gradient_transformer.py  simple_sprite.py  simple_transformer.py  simple_transformer_colors_to_chars.py  snake.py  text.py
terminedia/text/: __init__.py  fonts.py  planes.py  style.py
terminedia/transformers/: __init__.py  _kernel_table_unicode_square.py  base.py  kernel_simple_lines.py  library.py
terminedia/utils/: __init__.py  collections.py  colors.py  descriptors.py  gradient.py  rect.py  vector.py
terminedia/widgets/: __init__.py  core.py  file.py  misc.py  text.py
tests/: conftest.py  test_colors.py  test_events.py  test_images.py  test_subpixels.py  test_terminal_rendering.py  test_text_flow.py  test_text_planes.py  test_text_style.py  test_transformers.py  test_unicode.py  test_unicode_transforms.py  test_utils.py  test_utils_gradients.py  test_widgets.py
tools/: emoji_nick_gen.py  kernel_generator.py  makefont_shapes.py
